# python-learning

./: Makefile  README.md  main.py  pyproject.toml
src/: main.py  notes.py
src/day_2/: app.py  looping.py
src/day_2/lib/: check_discount.py
src/day_3/: feb_2.py
src/day_3/app/: main.py
src/day_3/app/modules/products/: serializer.py
