[project]
name = "python-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "scalar>=2018.9.10.2016",
    "scalar-fastapi>=1.6.1",
    "uvicorn>=0.40.0",
]

[tool.ruff.lint]
# Enable annotation-related rules
select = [
    "ANN",   # Missing type annotations
    "UP",    # Pyupgrade (modern syntax)
]
ignore = [
    "ANN101",  # Missing type annotation for self (often noisy)
    "ANN102",  # Missing type annotation for cls
]

# Optional: enforce stricter typing
[tool.ruff.lint.pydocstyle]
convention = "google"  # or "numpy", "pep257"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
target-version = "py314"
